fix: align arrow scroll buttons height and position with tab items

--- a/packages/components/src/components/tabs/tabs.scss
+++ b/packages/components/src/components/tabs/tabs.scss
@@ -213,7 +213,12 @@ $pulse-gap-offset: calc(#{variables.$db-border-width-xs} + #{variables.$db-spaci
 			.tabs-scroll-right {
 				position: absolute;
 				z-index: $db-tabs-z-index-button;
-				inset-block: variables.$db-spacing-fixed-xs;
+				inset-block-start: 0;
+				aspect-ratio: unset;
+				min-block-size: unset;
+				block-size: fit-content;
+				border-block: none;
+				padding-block: calc(#{variables.$db-spacing-fixed-xs} - #{variables.$db-border-width-2xs});
 			}
 
 			.tabs-scroll-left {
